# music-player

./: .gitignore  README.md  install.ps1  install.sh  ota.json  package-lock.json  package.json
.github/android/: debug.keystore
.github/workflows/: android.yml  release.yml
docs/: COMPLIANCE.md  oauth-sync.md
src/: index.html  main.js  playlists.js  settings.js  store.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/examples/: canon_test.rs  local_test.rs  native_fetch.rs  stream_test.rs  thumb_test.rs
src-tauri/src/: audio.rs  gdrive.rs  importer.rs  lib.rs  library.rs  main.rs  mpris.rs  ota.rs  playlists.rs  rpc.rs  share.rs  store.rs  stream.rs  youtube.rs  ytnative.rs
winget/: Indernol.MusicPlayer.installer.yaml  Indernol.MusicPlayer.locale.en-US.yaml  Indernol.MusicPlayer.yaml  README.md
