[package]
name = "music-player"
version = "0.2.1"
edition = "2021"
description = "Native local-first music player core"
default-run = "music-player"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
discord-rich-presence = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Native audio: decode (mp3/flac/wav/vorbis/…) + output to the system device.
# symphonia-aac + isomp4 let us decode YouTube m4a streams (see src/youtube.rs);
# 0.21+ is required for DecoderBuilder::with_byte_len, which the isomp4 demuxer
# needs to probe YouTube's moov-after-mdat files over HTTP.
rodio = { version = "0.21", features = ["symphonia-aac", "symphonia-isomp4"] }
# Blocking HTTP client for the range-request streaming source (src/stream.rs).
ureq = "2"
# MPRIS media controls (src/mpris.rs) — zbus backend: pure Rust, no libdbus.
souvlaki = { version = "0.8", default-features = false, features = ["use_zbus"] }
# Tag reading (title/artist/album/duration). NOTE: lofty's module paths are
# version-sensitive — if cargo build complains, align this version + the imports
# at the top of src/library.rs (documented there).
lofty = "0.21"
walkdir = "2"
base64 = "0.22"

[profile.release]
opt-level = 3
lto = true
